fixed copy to clipboard on mobile devices

--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@ html {
 body {
   transition: 200ms linear;
   background-color: var(--primary);
+  min-height: 100vh;
 }
 img,
 .material-icons,
@@ -1863,7 +1864,7 @@ img,
   }
 }
 .snackbar {
-  position: fixed;
+  position: fixed !important;
   z-index: 20;
   background-color: var(--navbar-color);
   box-shadow: 0px 0px 4px 0 var(--shadow-color);
